# oo2c

./: .gitignore  .oo2crc_local  ENV  ENV.in  INSTALL  Makefile  Makefile.config.in  PROBLEMS  README  README.MACOS  README.WIN32  README.md  aclocal.m4  configure  configure.ac  mkinstalldirs  package.xml  pkginfo.xml
doc/from-v1-to-v2/: Makefile  oo2c-v2.html  oo2c-v2.info  oo2c-v2.ps  oo2c-v2.texi
doc/language/: oberon2.texi
lib/: package.xml  pkginfo.xml.in
lib/src/: Ascii.Mod  BinaryRider.Mod  C.Mod  C.c  Channel.Mod  CharClass.Mod  Codec.Mod  ConvTypes.Mod  Err.Mod  Exception.Mod  Exception.c  Files.Mod  Files.c  HashCode.Mod  HashCode.c  IO.Mod  In.Mod  IntConv.Mod  IntStr.Mod  Integers.Mod  LRealConv.Mod  LRealMath.Mod  LRealMath.c  LRealStr.Mod  LanguageNew.Mod  Log.Mod  Logger.Mod  LongStrings.Mod  Msg.Mod  Object.Mod  Out.Mod  Out0.Mod  Out0.c  PThread.Mod  PThread.c  PosixFileDescr.Mod  PosixFileDescr.c  ProgramArgs.Mod  RT0.Mod  RT0.c  (+30 more)
man/: oo2c.1  oob.1  ooef.1  oowhereis.1
rsrc/OOC/: Makefile.config.in  Makefile.ooc-main  Makefile.tests-framework  Makefile.tests-scripts  gen_patch  make-index.sh  make-pseudo-rep.sh  makefilegen.pl  oo2crc-alt.xml  oo2crc.xml.in  oo2crc.xml.mk.in  oobacktrace.in  pkginfo.dtd
src/: AllModules.Mod  Codec.Mod  Config.Mod  Integers.Mod  Language.Mod  Make.Mod  Reals.Mod  RunTests.Mod  TestCodec.Mod  TestCompile.Mod  TestConfigCmdLine.Mod  TestConfigEnv.Mod  TestConfigSections.Mod  TestConfigSimple.Mod  TestGET.Mod  TestH2O.Mod  TestInterfaceGen.Mod  TestMake.Mod  TestOpTree.Mod  TestParser.Mod  TestScanner.Mod  TestServer.Mod  TestSymTab.Mod  TestTexinfo.Mod  TestThread.Mod  TestWebServer.Mod  encdec.Mod  gi.Mod  oo2c.Mod  oob.Mod  ooef.Mod  oowhereis.Mod
src/Codec/: CharRefXML.Mod  Deflate.Mod  Latin1.Mod  Twofish.Mod  TwofishC.Mod  TwofishC.c  UTF32.Mod  UU.Mod  YEnc.Mod  zlib.Mod
src/Config/: Parser.Mod  Section.Mod  Simple.Mod  Source.Mod  Value.Mod
src/H2O/: Emitter.Mod  Error.Mod  Module.Mod  Option.Mod  Parser.Mod  Process.Mod  Scanner.Mod  Source.Mod  Translate.Mod  Type.Mod  Value.Mod  Variant.Mod
src/Language/: Boolean.Mod  Char.Mod  Char8.Mod  INTEGER.Mod  Integer.Mod  IntegerType.Mod  Numeric.Mod  Real.Mod  Set.Mod  String.Mod  String0.Mod  String16.Mod  String8.Mod  TypeConversion.Mod
src/OOC/: AST.Mod  Config.Mod  Doc.Mod  Error.Mod  IR.Mod  Logger.Mod  Make.Mod  OpTree.Mod  Package.Mod  Parser.Mod  Repository.Mod  SSA.Mod  Scanner.Mod  SymbolTable.Mod
stage0/: Makefile.ext  src
stage0/lib/: src
tests/: Makefile
tests/benchmark/: .oo2crc_local  Makefile  makefile
tests/compile/: ConstFold1.Mod  ConstFold10.Mod  ConstFold11.Mod  ConstFold12.Mod  ConstFold13.Mod  ConstFold14.Mod  ConstFold15.Mod  ConstFold16.Mod  ConstFold16.Ref  ConstFold17.Mod  ConstFold2.Mod  ConstFold4.Mod  ConstFold5.Mod  ConstFold5.Ref  ConstFold6.Mod  ConstFold7.Mod  ConstFold8.Mod  ConstFold9.Mod  HOTFunction1.Mod  HOTFunction2.Mod  Makefile  Out.Mod  test-setup.xml  testsuite.xml
tests/config/: Makefile
tests/doc/: testcases_appC.txt  testcases_ch10_3.txt  testcases_ch8.txt  testcases_ch9.txt  testcases_flags.txt  testcases_generics.txt  testcases_longchar.txt
tests/expressions/: tst.Mod
tests/fold/: Fold1.Mod  Fold1.Ref  Fold2.Mod  Makefile  test-setup.xml  testsuite.xml
tests/h2o/: Makefile  not-wf.sh  wf.sh
tests/hostess-ooc1/: Makefile  Out.Mod  sample-oo2crc  test-setup.xml  testsuite.xml
tests/ia32/: HOTBaselineError1.Mod  HOTBaselineOutput0.Mod  HOTBaselineOutput1.Mod  HOTBaselineOutput3.Mod  HOTBaselineOutput3.Ref  HOTBaselineOutput5.Mod  HOTBaselineOutput5.Ref  HOTBaselineOutput6.Mod  HOTBaselineRun1.Mod  Makefile  test-setup.xml  testsuite.xml
tests/interface/: Makefile  not-wf.sh  wf.sh
tests/lib/: LibAscii.Mod  LibBigInt1.Mod  LibBinaryRider.Mod  LibC.Mod  LibC1.Mod  LibChannel.Mod  LibCharClass.Mod  LibConvTypes.Mod  LibErr.Mod  LibException1.Mod  LibException10.Mod  LibException10.Ref  LibException11.Mod  LibException11.Ref  LibException12.Mod  LibException12.Ref  LibException13.Mod  LibException14.Mod  LibException15.Mod  LibException16.Mod  LibException17.Mod  LibException18.Mod  LibException19.Mod  LibException2.Mod  LibException2.Ref  LibException20.Mod  LibException21.Mod  LibException22.Mod  LibException23.Mod  LibException23.Ref  LibException24.Mod  LibException25.Mod  LibException26.Mod  LibException27.Mod  LibException28.Mod  LibException28.Ref  LibException29.Mod  LibException29.Ref  LibException3.Mod  LibException3.Ref  (+159 more)
tests/make/: Makefile  test.sh
tests/oberon-doc/: Makefile  not-wf.sh  wf-comment.sh  wf.sh
tests/parser/: Makefile  not-wf.sh  wf-compare.sh  wf-stupid-pp.sh  wf.sh
tests/scanner/: Makefile  identity.sh  wf.sh
tests/ssa/: Abs0.Mod  Abs0.Ref  Abs1.Mod  Abs1.Ref  Abs2.Mod  Abs3.Mod  Abstract1.Mod  Abstract10.Mod  Abstract11.Mod  Abstract12.Mod  Abstract2.Mod  Abstract3.Mod  Abstract4.Mod  Abstract5.Mod  Abstract6.Mod  Abstract7.Mod  Abstract8.Mod  Abstract9.Mod  Adr1.Mod  Adr2.Mod  Adr3.Mod  Align1.Mod  Align1.Ref  Align2.Mod  And1.Mod  And1.Ref  AntiDep1.Mod  Array1.Mod  Array10.Mod  Array10.Ref  Array11.Mod  Array12.Mod  Array2.Mod  Array3.Mod  Array4.Mod  Array5.Mod  Array5.Ref  Array6.Mod  Array7.Mod  Array8.Mod  (+580 more)
tests/ssa-c-output/: Alloc1.Mod  CodeMotion1.Mod  CodeMotion2.Mod  CodeMotion3.Mod  Const1.Mod  Const2.Mod  Const3.Mod  Const4.Mod  Const5.Mod  Const6.Mod  Const7.Mod  Const8.Mod  Const8.Ref  Cse1.Mod  Cse2.Mod  Cse3.Mod  Dead1.Mod  Generic51.Mod  LoopRewrite1.Mod  LoopRewrite2.Mod  LoopRewrite3.Mod  LoopRewrite4.Mod  LoopRewrite5.Mod  LoopRewrite6.Mod  LoopRewrite7.Mod  LoopRewrite8.Mod  Makefile  NoCopy7.Mod  NoCopy8.Mod  NoDescriptor1.Mod  NoLengthInfo1.Mod  PRE1.Mod  PRE2.Mod  PRE3.Mod  Quicksort1.Mod  Quicksort1.Ref  Swap1.Mod  Swap1.Ref  Swap2.Mod  Swap2.Ref  (+25 more)
tests/ssa-x86-output/: C1.Mod  L1.Mod  Makefile  T0.Mod  T1.Mod  T2.Mod  T3.Mod  T4.Mod  T5.Mod  T6.Mod  T6a.Mod  T6b.Mod  T7.Mod  T7a.Mod  T7b.Mod  T8a.Mod  T8b.Mod  T8c.Mod  T8d.Mod  runTests.c  test-setup.xml  testsuite.xml
tests/symtab/: Makefile  not-wf.sh  wf-names-only.sh  (+1 more)
(+1595 files in other folders)
